add some javadoc, last EOL...